--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>Thread-example</module>
         <module>Algorithms</module>
         <module>zxing-example</module>
+        <module>proxy-example</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
